code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__auto_drive_review_resume_returns_to_running.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: "frames.join(\"\\n---FRAME---\\n\")"
---
 +----------------------------------------------------------------------------+
 |                                  Hanzo Dev                                 |
 +----------------------------------------------------------------------------+

 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands



  Auto Drive > <status redacted>                                 
 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
  • Agents Enabled  • Diagnostics Enabled                              API key
---FRAME---
 +----------------------------------------------------------------------------+
 |                                  Hanzo Dev                                 |
 +----------------------------------------------------------------------------+

 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands



  Auto Drive > <status redacted>                                 
 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
  • Agents Enabled  • Diagnostics Enabled                              API key
